force-app/main/default/objects/Apttus_CMConfig__AgreementIncentiveLimitData__c/Apttus_CMConfig__AgreementIncentiveLimitData__c.object-meta.xml
<CustomObject>
    <description>Represents a single limit data row associated with the incentive limit for the agreement</description>
    <label>Agreement Incentive Limit Data</label>
    <nameField>
        <displayFormat>ALD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Incentive Limit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>