force-app/main/default/objects/Apttus_CMConfig__AgreementIncentiveLimitData__c/fields/Apttus_CMConfig__LimitAppliesTo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__LimitAppliesTo__c</fullName>
    <description>Indicates the scope the limit should be applied to</description>
    <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
    <label>Limit Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>