force-app/main/default/objects/Apttus_CMConfig__AgreementIncentiveLimitData__c/fields/Apttus_CMConfig__LimitId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__LimitId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated incentive limit</description>
    <inlineHelpText>ID of the associated incentive limit</inlineHelpText>
    <label>Limit</label>
    <referenceTo>Apttus_Config2__IncentiveLimit__c</referenceTo>
    <relationshipLabel>Agreement Incentive Limit Data</relationshipLabel>
    <relationshipName>AgreementIncentiveLimitData</relationshipName>
    <type>Lookup</type>
</CustomField>