force-app/main/default/objects/Apttus_CMConfig__AgreementIncentiveLimitData__c/fields/Apttus_CMConfig__LimitMetric__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__LimitMetric__c</fullName>
    <description>The limit metric</description>
    <inlineHelpText>The limit metric</inlineHelpText>
    <label>Limit Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number Of Times Used</fullName>
                <default>true</default>
                <label>Number Of Times Used</label>
            </value>
            <value>
                <fullName>Benefit Quantity</fullName>
            </value>
            <value>
                <fullName>Benefit Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>