force-app/main/default/objects/Apttus_CMConfig__AgreementIncentiveLimitData__c/fields/Apttus_CMConfig__UsedValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__UsedValue__c</fullName>
    <description>The used value</description>
    <inlineHelpText>The used value</inlineHelpText>
    <label>Used Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>